<resources>
    <string name="app_name">Welcome To Android</string>
    <string name="app_home">Home</string>
    <string name="app_geolocation">Geolocation</string>
    <string name="app_camera">Camera</string>
    <string name="app_calendar">Calendar</string>
    <string name="app_brightness">Brightness</string>
    <string name="app_flashlight">Flashlight</string>
    <string name="app_vibration">Vibration</string>
    <string name="app_screen_orientation">Screen Orientation</string>
    <string name="app_notifications">Notifications</string>
    <string name="app_social_sharing">Social Sharing</string>
    <string name="app_screenshot">Screenshot</string>
    <string name="menu_title">Menu</string>

    <string name="asd_first_box">
        This app was developed with native Android
    </string>
    <string name="asd_second_box">
        Its purpose is to show its use of Native API\'s
    </string>
    <string name="asd_third_box">
        This can then be used to compare it against a cross-platform application developed with Ionic
    </string>
    <string name="asd_fourth_box">
        The API\'s used are ones that are commonly used in mobile applications
    </string>

    <string name="geolocation">This is Geolocation Page</string>
    <string name="camera">This is Camera Page</string>
    <string name="calendar">This is Calendar Page</string>
    <string name="brightness">This is Brightness Page</string>
    <string name="flashlight">This is Flashlight Page</string>
    <string name="vibration">Vibrate the device once for 2 seconds</string>
    <string name="screen_orientation">This is Screen Orientation Page</string>
    <string name="notifications">Notification Message</string>
    <string name="social_sharing">This is Social Sharing Page</string>
    <string name="screenshot">This is Screenshot Page</string>

    <string name="action_settings">Settings</string>

    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>

    <string name="vibrate_button">Vibrate</string>
    <string name="vibrate_pause_button">Vibrate Pause Vibrate</string>
    <string name="vibrate_pause">Vibrate for a second, pause for a second, vibrate for a second</string>
    <string name="bright_button">Bright</string>
    <string name="med_bright_button">Medium</string>
    <string name="dark_bright_button">Dull</string>
    <string name="calendar_button">Insert Event</string>
    <string name="flashlight_off">Turn Off Flashlight</string>
    <string name="flashlight_on">Turn On Flashlight</string>
    <string name="push_notification">Push Notification</string>
    <string name="current_orientation">Current Orientation</string>
    <string name="lock_portrait">Lock Portrait Orientation</string>
    <string name="lock_landscape">Lock Landscape Orientation</string>
    <string name="unlock_orientation">Unlock Orientation</string>
    <string name="take_screenshot">Take Screenshot</string>
    <string name="social_sharing_message">Message</string>
    <string name="share_message">Share</string>
    <string name="take_image">Take Image</string>
    <string name="get_position">Show Position</string>
</resources>
