<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vibration"
        android:textColor="@color/colorShop2"
        android:textSize="20sp"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />

    <Button
        android:id="@+id/vibrate_once"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/secondary"
        android:text="@string/vibrate_button"
        android:textSize="26dp"
        android:textColor="@color/colorNavText"
        android:layout_marginTop="150dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vibrate_pause"
        android:textColor="@color/colorShop2"
        android:textSize="20sp"
        android:layout_marginTop="250dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />

    <Button
        android:id="@+id/vibrate_pause"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/primary"
        android:text="@string/vibrate_pause_button"
        android:textSize="26dp"
        android:textColor="@color/colorNavText"
        android:layout_marginTop="310dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />


</RelativeLayout>