<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/assertive"
        android:text="@string/asd_first_box"
        android:textColor="@color/colorNavText"
        android:padding="20dp"
        android:textSize="20sp"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/primary"
        android:text="@string/asd_second_box"
        android:textColor="@color/colorNavText"
        android:padding="20dp"
        android:textSize="20sp"
        android:layout_marginTop="210dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:background="@color/secondary"
        android:text="@string/asd_third_box"
        android:textColor="@color/colorNavText"
        android:padding="20dp"
        android:textSize="20sp"
        android:layout_marginTop="320dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@color/bright"
        android:text="@string/asd_fourth_box"
        android:textColor="@color/dark"
        android:padding="20dp"
        android:textSize="20sp"
        android:layout_marginTop="470dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />

</RelativeLayout>