<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/current_orientation"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@color/secondary"
            android:text="@string/current_orientation"
            android:textSize="20dp"
            android:textColor="@color/colorNavText"
            android:layout_marginTop="150dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            />

        <Button
            android:id="@+id/lock_portrait"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@color/primary"
            android:text="@string/lock_portrait"
            android:textSize="20dp"
            android:textColor="@color/colorNavText"
            android:layout_marginTop="250dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            />

        <Button
            android:id="@+id/lock_landscape"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@color/assertive"
            android:text="@string/lock_landscape"
            android:textSize="20dp"
            android:textColor="@color/colorNavText"
            android:layout_marginTop="350dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            />

        <Button
            android:id="@+id/unlock_orientation"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@color/bright"
            android:text="@string/unlock_orientation"
            android:textSize="20dp"
            android:textColor="@color/dark"
            android:layout_marginTop="450dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            />


    </RelativeLayout>
</ScrollView>